@@ -4,7 +4,6 @@
 <use name=DataFormats/DTRecHit>
 <use name=DataFormats/L1GlobalTrigger>
 <use name=DataFormats/CSCDigi>
-<use name=DataFormats/RPCRecHit>
 <use name=CondFormats/L1TObjects>
 <use name=Geometry/DTGeometry>
 <use name=Geometry/CSCGeometry>
